Made Huge improvements
Finally got to a point where all my other experiments went wrong. I am learning as I go and create new projects just to understand. One can only learn after so many struggles.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,77 @@
-/tests/__pycache__
-/modules/__pycache__
-/core/__pycache__
-/__pycache__
-/.vscode
-/.venv
-# Ignore environment variable and secret files
-.env
-.env.*
-PICOVOICE_ACCESS_KEY.txt
-# End sensitive data ignore
-pytest_output.txt
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pyenv
+.python-version
+
+# pipenv
+Pipfile.lock
+
+# virtualenv
+.venv/
+venv/
+ENV/
+env/
+
+# VS Code
+.vscode/
+
+# mypy
+.mypy_cache/
+.dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# Models and large data
+models/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Misc
 *.log
+
